My Second commit

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="Images/cloud.jpg" alt="Cloud-image">
+        <img class="top-cloud" src="cloud.jpg" alt="Cloud-image">
         <h1>I am Gokul</h1>
         <p>a Web develpoer</p>
-        <img class=" bottom-cloud" src="Images/cloud.jpg" alt="Cloud-image">
-        <img src="Images/mountain.jpg" alt="Mountain-image">
+        <img class=" bottom-cloud" src="cloud.jpg" alt="Cloud-image">
+        <img src="mountain.jpg" alt="Mountain-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img  class="imgA" src="Images/Harsha.jpg" alt="Gokul image">
+          <img  class="imgA" src="Harsha.jpg" alt="Gokul image">
           <h2>Hello.</h2>
           <p class="intro">I am a software develpoer and Web develpoer.I love riding bikes and trips.</p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="imgA" id="skill" src="Images/programming_tips.jpg" alt="">
+            <img class="imgA" id="skill" src="programming_tips.jpg" alt="">
             <h3>Web Develpoer</h3>
             <p>I am good in programming language like Java.I'm good in front end technologies like HTML,CSS and JS.I know SQL Database.</p>
           </div>
           <div class="skill-row">
-            <img class="imgA" class="chilli" src="Images/burger.jpg" alt="Burger">
+            <img class="imgA" class="chilli" src="burger.jpg" alt="Burger">
             <h3>Burger King</h3>
             <p>I love burger morethan pizza.Addicted to KFC's fried Chicken.</p>
           </div>
